[package]
name = "example_widgets"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
repository = "https://github.com/noogen-projects/yew-mdc-widgets"
description = "Yew MDC widgets example"

[dependencies]
yew = { version = "0.17", features = ["web_sys"] }
yew-mdc-widgets = { path = "../widgets" }
js-sys = "0.3"
tiny_file_server = "0.1"
env_logger = "0.8"