[package]
name = "yew-mdc-widgets"
version = "0.2.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/yew-mdc-widgets"
description = "Yew MDC widgets"
keywords = ["noogen", "web", "mdc", "widgets", "yew"]
categories = ["web-programming", "wasm", "gui"]

[dependencies]
yew = { git = "https://github.com/XX/yew.git", branch = "extend_listener" }
js-sys = "0.3"
gloo = "0.5"
gloo-console = "0.2"
wasm-bindgen = "0.2"
const_format = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "AbortController",
    "AbortSignal",
    "AnimationEvent",
    "BinaryType",
    "Blob",
    "BlobPropertyBag",
    "console",
    "CustomEvent",
    "DedicatedWorkerGlobalScope",
    "Document",
    "DomTokenList",
    "DragEvent",
    "Element",
    "ErrorEvent",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "FocusEvent",
    "Headers",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MessageEvent",
    "MouseEvent",
    "Node",
    "ObserverCallback",
    "PointerEvent",
    "ProgressEvent",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Storage",
    "Text",
    "TouchEvent",
    "TransitionEvent",
    "UiEvent",
    "Url",
    "WebSocket",
    "WheelEvent",
    "Window",
    "Worker",
    "WorkerGlobalScope",
    "WorkerOptions"
]