[package]
name = "example_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/yew-mdc-widgets"
description = "Yew MDC widgets example WASM client"

[dependencies]
gloo-console = "0.2"
js-sys = "0.3"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yew-mdc-widgets = { path = "../../widgets" }
