[package]
name = "example_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/yew-mdc-widgets"
description = "Yew MDC widgets example WASM client"

[dependencies]
gloo-console = "0.3"
js-sys = "0.3"
yew = { version = "0.21", features = ["csr"] }
yew-mdc-widgets = { path = "../../widgets" }
